--- a/index.html
+++ b/index.html
@@ -99,11 +99,29 @@ document.addEventListener("DOMContentLoaded", () => {
         </div>
         <div class="top-content__banner">
           <h1 class="top-content__heading">We've Got You Covered</h1>
-          <p class="top-content__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum optio fugit rerum repellendus pariatur rem ratione corrupti atque adipisci aliquid possimus et facilis provident ullam.</p><a class="top-content__banner-btn btn--blue" href="#">Learn More</a>
+          <p class="top-content__paragraph">Cliche health goth cardigan, kitsch venmo ramps hell of church-key deep v kickstarter dreamcatcher. DIY asymmetrical seitan synth pug polaroid man braid stumptown flannel four dollar toast +1 subway tile tote bag. Microdosing helvetica taiyaki hoodie.</p><a class="top-content__banner-btn btn--blue" href="#">Learn More</a>
         </div>
         <!--/.top-content__banner-->
       </section>
       <!--/.top-content-->
+      <section class="services" id="services">
+        <h2 class="services__heading">PayPal is for everyone who pays or gets paid</h2>
+        <div class="services__grid">
+          <div class="services__col"><i class="fas fa-user-tie"></i>
+            <h3 class="services__name">Individuals</h3>
+            <p class="services__paragraph">I'm baby irony pok pitchfork four dollar toast butcher la croix synth hella artisan gluten-free tbh.</p><a class="services__btn" href="#">Learn More</a>
+          </div>
+          <div class="services__col"><i class="fas fa-briefcase"></i>
+            <h3 class="services__name">Businesses</h3>
+            <p class="services__paragraph">I'm baby pok pok +1 hoodie man bun skateboard pug raclette lumbersexual cold-pressed tofu aesthetic.</p><a class="services__btn" href="#">Learn More</a>
+          </div>
+          <div class="services__col"><i class="fas fa-handshake"></i>
+            <h3 class="services__name">Partners</h3>
+            <p class="services__paragraph">I'm baby vegan cardigan pork belly, irony church-key readymade vexillologist retro gastropub wolf.</p><a class="services__btn" href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+      <!--/.services-->
       <footer class="page-footer" role="contentinfo">
         <div class="page-footer__inner"></div>
       </footer>
