--- a/index.html
+++ b/index.html
@@ -122,6 +122,36 @@ document.addEventListener("DOMContentLoaded", () => {
         </div>
       </section>
       <!--/.services-->
+      <section class="features" id="features">
+        <h2 class="features__title">The world prefers PayPal</h2>
+        <div class="features__grid">
+          <div class="features__col">
+            <h3 class="features__heading">Advanced Protection</h3>
+            <p class="features__paragraph">Iceland semiotics pinterest direct trade, plaid next level waistcoat dreamcatcher small batch taxidermy keytar church-key. Aesthetic 90's cronut woke heirloom, artisan organic vinyl umami flannel. Godard celiac PBR&B, taxidermy fashion axe hexagon hot chicken enamel pin.</p>
+          </div>
+          <div class="features__col">
+            <h3 class="features__heading">Fast Payments</h3>
+            <p class="features__paragraph">Chambray roof party chillwave four loko franzen distillery. Cred direct trade cray, gastropub coloring book 3 wolf moon messenger bag cold-pressed lumbersexual hashtag. Meditation gluten-free VHS, affogato etsy knausgaard 3 wolf moon fam tote bag thundercats meh leggings.</p>
+          </div>
+          <div class="features__col">
+            <h3 class="features__heading">Global Reach</h3>
+            <p class="features__paragraph">Cornhole kinfolk af live-edge twee, messenger bag adaptogen. Quinoa twee four dollar toast, live-edge adaptogen snackwave kickstarter letterpress taxidermy ramps cold-pressed raw denim trust fund kale chips. Literally butcher single-origin coffee forage fam.</p>
+          </div>
+          <div class="features__col">
+            <h3 class="features__heading">Easy Integration</h3>
+            <p class="features__paragraph">Chicharrones brunch enamel pin, mixtape vexillologist waistcoat aesthetic crucifix kombucha twee cold-pressed cronut mumblecore iPhone cred. Gastropub 8-bit microdosing four dollar toast keffiyeh, stumptown shabby chic umami drinking vinegar activated charcoal hell of</p>
+          </div>
+          <div class="features__col">
+            <h3 class="features__heading">Simple and Convenient</h3>
+            <p class="features__paragraph">Venmo fam tacos irony. Gluten-free intelligentsia authentic, VHS normcore taxidermy squid wayfarers direct trade gastropub bushwick. Subway tile austin truffaut, glossier normcore forage freegan four loko neutra affogato prism small batch vegan.</p>
+          </div>
+          <div class="features__col">
+            <h3 class="features__heading">24/7 Service</h3>
+            <p class="features__paragraph">Whatever aesthetic pinterest snackwave mlkshk 8-bit. You probably haven't heard of them four loko humblebrag, green juice pok pok taxidermy locavore tilde raw denim tote bag truffaut fingerstache celiac franzen. Shoreditch ramps drinking vinegar trust fund.</p>
+          </div>
+        </div>
+      </section>
+      <!--/.features-->
       <footer class="page-footer" role="contentinfo">
         <div class="page-footer__inner"></div>
       </footer>
