--- a/index.html
+++ b/index.html
@@ -152,6 +152,20 @@ document.addEventListener("DOMContentLoaded", () => {
         </div>
       </section>
       <!--/.features-->
+      <section class="account" id="account">
+        <h2 class="account__title">Get started with PayPal.</h2>
+        <div class="account__grid">
+          <picture class="picture account__img-wrapper">
+            <source media="(min-width: 0)" type="image/webp" srcset="img/account-01-640p.webp, img/account-01-1280p.webp 2x" /><img class="account__img" alt="Mackbook" width="640" src="img/account-01-640p.png" srcset="img/account-01-1280p.png 2x" />
+          </picture>
+          <ul class="account__list">
+            <li class="account__list-item"><span class="account__number">1</span><span>Set up<a class="account__link" href="#"> a business account</a></span></li>
+            <li class="account__list-item"><span class="account__number">2</span><span class="account__text">Selvage affogato ramps leggings small batch.</span></li>
+            <li class="account__list-item"><span class="account__number">3</span><span class="account__text">Kombucha kale chips tilde, gluten-free disrupt crucifix ramps poke forage sartorial edison bulb vaporware.</span></li>
+          </ul>
+        </div>
+      </section>
+      <!--/.account-->
       <footer class="page-footer" role="contentinfo">
         <div class="page-footer__inner"></div>
       </footer>
