--- a/index.html
+++ b/index.html
@@ -166,9 +166,33 @@ document.addEventListener("DOMContentLoaded", () => {
         </div>
       </section>
       <!--/.account-->
-      <footer class="page-footer" role="contentinfo">
-        <div class="page-footer__inner"></div>
+      <section class="signup" id="signup">
+        <h2 class="signup__title">Sign Up and Get Started</h2><a class="signup__btn btn--blue" href="#">Get Started</a>
+      </section>
+      <!--/.signup-->
+      <footer class="page-footer">
+        <div class="page-footer__top">
+          <ul class="page-footer__list">
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">Help and Contact</a></li>
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">Fees</a></li>
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">Security</a></li>
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">Features</a></li>
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">Shop</a></li>
+          </ul>
+          <ul class="page-footer__list">
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">English</a></li>
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">Spanish</a></li>
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">French</a></li>
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#">Italian</a></li>
+            <li class="page-footer__list-item"><a class="page-footer__list-link" href="#"><img class="page-footer__img" alt="Flag" width="100" src="img/flag.png"></a></li>
+          </ul>
+        </div>
+        <!--/.page-footer__top-->
+        <div class="page-footer__bottom">
+          <p class="page-footer__copyright">Copyright &copy; All Rights Reserved</p>
+        </div>
       </footer>
+      <!--/.page-footer-->
     </div>
   </div><script defer src="js/bundle.js">
   </script>
